@@ -32,4 +32,6 @@ case "$1" in
     	;;
 esac
 
+#DEBHELPER#
+
 exit 0
