@@ -17,4 +17,6 @@ case "$1" in
 
 esac
 
+#DEBHELPER#
+
 exit 0
