@@ -7,6 +7,8 @@ lcs-web (2.1~1) UNRELEASED; urgency=low
   * Misc fixes to lcs-web-config.
   * Switch to debhelper 5.
   * Add missing dependency on slis-common.
+  * Fix rights of many files. General cleanup of lintian warnings.
+  * Fix makefile to actually install files.
 
  -- Jean-Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Sat, 31 May 2008 20:50:00 +0200
 
